[project]
name = "SMHviz_plot"
version = "0.0.1"
authors = [
  { name="Lucie Contamin", email="contamin@pitt.edu" },
]
description = "SMH package for visualization"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "datetime",
    "numpy>=1.23.5",
    "pandas>=1.5.2",
    "plotly>=5.9.0"
]

[tool.setuptools.packages.find]
exclude = ["docs*", "data*"]